@@ -15,6 +15,8 @@ Release 1.4.3 (2011-11-xx)
 - Poco::Util::HelpFormatter: improved option help formatting if  indentation has 
   been set explicitely.
 - added Mail sample to NetSSL_OpenSSL, showing use of SecureSMTPClientSession.
+- added additional read() overloads to Poco::Net::HTMLForm.
+- fixed SF# 3440769: Poco::Net::HTTPResponse doesn't like Amazon EC2 cookies.
 
 
 Release 1.4.2p1 (2011-09-24)
@@ -1610,4 +1612,4 @@ building the libraries.
 
 
 --
-$Id: //poco/1.4/dist/CHANGELOG#31 $
+$Id: //poco/1.4/dist/CHANGELOG#32 $
